Integrated MongoDB for Authentication

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
         "dev": "node server.js"
     },
     "dependencies": {
-        "resend": "^3.0.0"
+        "resend": "^3.0.0",
+        "mongoose": "^8.0.0"
     },
     "engines": {
-        "node": ">=14.0.0"
+        "node": ">=18.0.0"
     }
 }
